--- a/core/forumdisplay/threadlist.less
+++ b/core/forumdisplay/threadlist.less
@@ -118,4 +118,19 @@ body.page-forum {
 			display: flex !important;
 		}
 	}
+	body.page-forum .threadlistsection .threadblock .threadmain .threadmeta {
+		.postcount.is-hidden-mobile
+		{
+			display: unset !important;
+		}
+		.creator.is-hidden-mobile {
+			display: unset !important;
+		}
+		.createddate.is-hidden-mobile {
+			display: unset !important;
+		}
+		.is-hidden-tablet.lastposter {
+			display: none !important;
+		}
+	}
 }
